fixed logout button on safari and dark mode toggle bug

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,6 +47,14 @@
   color: #5bc0de;
 }
 
+a[type='button'] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+
+}
+
+
 @mixin switch($res: 'sm') {
   $index: 1rem;
   $mainVal: 1rem;
